header and first section done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>London trip</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <!-- Title -->
+      <h1>Il mio Viaggio a Londra</h1>
+
+      <!-- Photos -->
+      <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="london-eye" />
+      <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="london-eye" />
+      <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="london-eye" />
+
+      <hr />
+    </header>
+
+    <main>
+      <!-- Le mie spese -->
+      <section id="Le-mie-spese">
+        <h2>Le mie spese</h2>
+
+        <table>
+          <tr>
+            <th>Numero</th>
+            <th>Descrizione</th>
+            <th>Costo</th>
+          </tr>
+
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+          </tr>
+
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+          </tr>
+
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+          </tr>
+
+          <td colspan="2">Totale</td>
+          <td>360€</td>
+        </table>
+
+        <hr />
+      </section>
+
+      <!-- Cose da fare -->
+
+      <section id="cose-da-fare">
+        <h2>Cose da fare</h2>
+        <ul>
+            <li>Visitare la Tower of London</li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
