--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
             <td>Biglietto Aereo</td>
             <td>120€</td>
           </tr>
-
-          <td colspan="2">Totale</td>
-          <td>360€</td>
+          
+          <tr>
+            <td colspan="2">Totale</td>
+            <td>360€</td>
+          </tr>
         </table>
 
         <hr />
@@ -61,8 +63,12 @@
       <section id="cose-da-fare">
         <h2>Cose da fare</h2>
         <ul>
-            <li>Visitare la Tower of London</li>
+          <li>Visitare la Tower of London &#10008;</li>
+          <li>Visitare Greenwich &#10004;</li>
+          <li>Ascoltare un artista di strada a Covent Garden &#10004;</li>
+          <li>Mangiare il tipico Fish and Chips inglese &#10008;</li>
         </ul>
+        <hr />
       </section>
     </main>
   </body>
